[package]
name = "torako"
version = "0.5.7-alpha.0"
authors = ["miyachan <wakarimasenco@gmail.com>"]
edition = "2018"
repository = "https://github.com/miyachan/torako"
publish = false

[features]
default = ["jemalloc"]
jemalloc = ["jemallocator"]
trust-dns = ["reqwest/trust-dns"]

[dependencies]
clap = "2.33.3"
log = "0.4.11"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
futures = "0.3.5"
reqwest = { version = "0.10.7", features = ["json", "stream", "gzip", "socks"] }
thiserror = "1.0.20"
toml = "0.5.6"
rustc-hash = "1.1.0"
rand = "0.7.3"
governor = "0.3.1"
mysql_async = "0.24.2"
smallstr = { version = "0.2.0", features = ["serde"] }
chrono = "0.4.15"
chrono-tz = "0.5.2"
regex = "1.3.9"
lazy_static = "1.4.0"
htmlescape = "0.3.1"
fnv = "1.0.7"
parking_lot = "0.11.0"
backoff = "0.2.1"
humantime-serde = "1.0.0"
humantime = "2.0.1"
url = { version = "2.1.1", features = ["serde"] }
ctrlc = { version = "3.1.6", features = ["termination"] }
erased-serde = "0.3.12"
warp = { version = "0.2.4", default-features = false }
pretty_env_logger = "0.4.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }

[target.'cfg(not(target_family = "windows"))'.dependencies]
users = "0.10.0"
nix = "0.18.0"
